--- a/package.json
+++ b/package.json
@@ -38,5 +38,16 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "format-package": "5.2.0",
     "prettier": "^1.19.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
