--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "storybook:ui": "yarn workspace @monorepo_template/ui storybook",
     "test": "yarn workspaces run test"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn workspace @monorepo_template/ui pre-commit"
+    }
+  },
   "devDependencies": {
     "@types/jest": "^24.0.23",
     "@types/react-test-renderer": "^16.9.1",
@@ -38,10 +43,5 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "format-package": "5.2.0",
     "prettier": "^1.19.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn workspaces run pre-commit"
-    }
   }
 }
