--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,8 +10,9 @@
   "scripts": {
     "build-storybook": "build-storybook",
     "clean": "rimraf node_modules yarn-error.log",
-    "lint": "eslint ./",
-    "lint-fix": "eslint --fix ./",
+    "lint": "eslint ./src/**/*.ts",
+    "lint-fix": "eslint ./src/**/*.ts --fix",
+    "prettier": "prettier --write ./src/**/*.ts",
     "pre-commit": "lint-staged",
     "storybook": "start-storybook -p 6006",
     "test": "jest --config=config/jest.config.js"
@@ -30,14 +31,8 @@
     "@storybook/addon-viewport": "^5.2.6",
     "@storybook/addons": "^5.2.6",
     "@storybook/react": "^5.2.6",
-    "@types/ramda": "^0.26.36",
     "@types/styled-components": "^4.4.0",
     "@types/styled-system": "^5.1.4",
-    "babel-loader": "^8.0.6",
-    "better-npm-run": "^0.1.1",
-    "jest": "^24.9.0",
-    "react-test-renderer": "^16.12.0",
-    "rimraf": "^3.0.0",
-    "typescript": "^3.7.2"
+    "babel-loader": "^8.0.6"
   }
 }
