--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn workspace @monorepo_template/ui pre-commit"
+      "pre-commit": "echo 'precommit!!!'"
     }
   },
   "devDependencies": {
