--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,7 +12,7 @@
     "clean": "rimraf node_modules yarn-error.log",
     "lint": "eslint ./src/**/*.ts",
     "lint-fix": "eslint ./src/**/*.ts --fix",
-    "pre-commit": "lint-staged",
+    "pre-commit": "yarn lint-fix && yarn prettier",
     "prettier": "prettier --write ./src/**/*.ts",
     "storybook": "start-storybook -p 6006",
     "test": "jest --config=config/jest.config.js"
@@ -21,7 +21,9 @@
     "@monorepo_template/tools": "1.0.0",
     "ramda": "^0.26.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "styled-components": "^4.4.1",
+    "styled-system": "^5.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
