--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -2,12 +2,17 @@
   "name": "@monorepo_template/db",
   "version": "1.0.0",
   "license": "MIT",
+  "private": true,
   "main": "index.js",
   "scripts": {
     "clean": "rimraf node_modules yarn-error.log",
-    "lint": "eslint ./",
-    "lint-fix": "eslint --fix ./",
-    "pre-commit": "lint-staged",
+    "lint": "eslint --ext .ts --ext .js ./src/**",
+    "lint-fix": "eslint --fix ./src/**/*.ts ./src/**/*.js",
+    "pre-commit": "yarn lint-fix && yarn prettier",
+    "prettier": "prettier --write ./src/**/*.ts",
     "test": "jest --config=config/jest.config.js"
+  },
+  "dependencies": {
+    "@monorepo_template/tools": "1.0.0"
   }
 }
