chore(workspace): commitizen

--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
       "packages/*"
     ]
   },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
   "scripts": {
     "clean": "yarn workspaces run clean && yarn run clean:root",
     "clean:root": "rimraf node_modules",
+    "commit": "git-cz",
     "format:pkg": "format-package -w",
     "lint": "yarn workspaces run lint",
     "lint-fix": "yarn workspaces run lint-fix",
@@ -23,7 +29,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn workspaces pre-commit"
+      "pre-commit": "yarn workspaces run pre-commit",
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
     }
   },
   "devDependencies": {
@@ -33,6 +40,7 @@
     "@typescript-eslint/parser": "^2.8.0",
     "awesome-typescript-loader": "^5.2.1",
     "better-npm-run": "^0.1.1",
+    "cz-conventional-changelog": "^3.0.2",
     "eslint": "6.7.0",
     "eslint-config-airbnb": "18.0.1",
     "eslint-config-prettier": "^6.7.0",
@@ -42,7 +50,7 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "format-package": "5.2.0",
-    "husky": "^3.1.0",
+    "husky": "^4.0.0-beta.5",
     "prettier": "^1.19.1",
     "rimraf": "3.0.0",
     "typescript": "^3.7.2"
