--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "scripts": {
     "clean": "rimraf node_modules yarn-error.log",
-    "lint": "eslint --ext .ts --ext .js ./src/**",
-    "lint-fix": "eslint --fix ./src/**/*.ts ./src/**/*.js",
+    "lint": "find -E ./src -regex \".*\\.(ts|tsx|js|jsx)\" | xargs eslint",
+    "lint-fix": "find -E ./src -regex \".*\\.(ts|tsx|js|jsx)\"  | xargs eslint --fix",
     "pre-commit": "yarn lint-fix && yarn prettier",
     "prettier": "prettier --write ./src/**/*.ts",
     "test": "jest --config=config/jest.config.js"
