--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,10 +10,11 @@
   "scripts": {
     "build-storybook": "build-storybook",
     "clean": "rimraf node_modules yarn-error.log",
-    "lint": "find -E ./src -regex \".*\\.(ts|tsx|js|jsx)\" | xargs eslint",
-    "lint-fix": "find -E ./src -regex \".*\\.(ts|tsx|js|jsx)\"  | xargs eslint --fix",
+    "cmd": "tools-cmd",
+    "lint": "task lint",
+    "lint-fix": "task lint-fix",
     "pre-commit": "yarn lint-fix && yarn prettier",
-    "prettier": "prettier --write ./src/**/*.ts",
+    "prettier": "task prettier",
     "storybook": "start-storybook -p 6006",
     "test": "jest --config=config/jest.config.js"
   },
