Added support for tests

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -10,7 +10,7 @@
     "lint-fix": "task lint-fix",
     "pre-commit": "yarn lint-fix && yarn prettier",
     "prettier": "task prettier",
-    "test": "jest --config=config/jest.config.js"
+    "test": "echo skipping..."
   },
   "dependencies": {
     "@monorepo_template/tools": "1.0.0"
