--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,7 +16,7 @@
     "pre-commit": "yarn lint-fix && yarn prettier",
     "prettier": "task prettier",
     "storybook": "start-storybook -p 6006",
-    "test": "jest --config=config/jest.config.js"
+    "test": "task test"
   },
   "dependencies": {
     "@monorepo_template/tools": "1.0.0",
