--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     }
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.7.7",
     "@types/jest": "^24.0.23",
     "@types/react-test-renderer": "^16.9.1",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
@@ -51,9 +52,11 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "format-package": "5.2.0",
     "husky": "^4.0.0-beta.5",
+    "jest": "^24.9.0",
     "monorepo-run": "^0.4.2",
     "prettier": "^1.19.1",
     "rimraf": "3.0.0",
+    "ts-jest": "^24.3.0",
     "typescript": "^3.7.2"
   }
 }
