--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,7 +9,7 @@
     "lint-fix": "task lint-fix",
     "pre-commit": "yarn lint-fix && yarn prettier",
     "prettier": "task prettier",
-    "test": "jest --config=config/jest.config.js"
+    "test": "task test"
   },
   "dependencies": {
     "@monorepo_template/tools": "1.0.0"
