--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "clean": "rimraf node_modules yarn-error.log",
-    "lint": "taks lint",
+    "lint": "task lint",
     "lint-fix": "task lint-fix",
     "pre-commit": "yarn lint-fix && yarn prettier",
     "prettier": "task prettier",
